Fixing errors identified by lint.

--- a/src/epub/text/preface.xhtml
+++ b/src/epub/text/preface.xhtml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" epub:prefix="z3998: http://www.daisy.org/z3998/2012/vocab/structure/, se: https://standardebooks.org/vocab/1.0" xml:lang="en-US">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" epub:prefix="z3998: http://www.daisy.org/z3998/2012/vocab/structure/, se: https://standardebooks.org/vocab/1.0" xml:lang="en-GB">
 	<head>
 		<title>Preface</title>
 		<link href="../css/core.css" rel="stylesheet" type="text/css"/>
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
-	<body epub:type="bodymatter z3998:fiction">
+	<body epub:type="frontmatter z3998:non-fiction">
 		<section id="preface" epub:type="preface">
-			<h1>BLEAK HOUSE</h1>
 			<h2 epub:type="title">Preface</h2>
 			<p>A Chancery judge once had the kindness to inform me, as one of a company of some hundred and fifty men and women not labouring under any suspicions of lunacy, that the Court of Chancery, though the shining subject of much popular prejudice (at which point I thought the judge’s eye had a cast in my direction), was almost immaculate. There had been, he admitted, a trivial blemish or so in its rate of progress, but this was exaggerated and had been entirely owing to the “parsimony of the public,” which guilty public, it appeared, had been until lately bent in the most determined manner on by no means enlarging the number of Chancery judges appointed⁠—I believe by Richard the Second, but any other king will do as well.</p>
 			<p>This seemed to me too profound a joke to be inserted in the body of this book or I should have restored it to Conversation Kenge or to <abbr>Mr.</abbr> Vholes, with one or other of whom I think it must have originated. In such mouths I might have coupled it with an apt quotation from one of Shakespeare’s sonnets:</p>
