--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -14,7 +14,211 @@
 					<a href="text/imprint.xhtml">Imprint</a>
 				</li>
 				<li>
-					<a href="text/chapter-1.xhtml"><span epub:type="z3998:roman">I</span>: <span epub:type="subtitle">CHAPTERTITLE</span></a>
+					<a href="text/preface.xhtml">Preface</a>
+				</li>
+				<li>
+					<a href="text/halftitle.xhtml">Bleak House</a>
+				</li>
+				<li>
+					<a href="text/chapter-1.xhtml"><span epub:type="z3998:roman">I</span>: <span epub:type="subtitle">In Chancery</span></a>
+				</li>
+				<li>
+					<a href="text/chapter-2.xhtml"><span epub:type="z3998:roman">II</span>: <span epub:type="subtitle">In Fashion</span></a>
+				</li>
+				<li>
+					<a href="text/chapter-3.xhtml"><span epub:type="z3998:roman">III</span>: <span epub:type="subtitle">A Progress</span></a>
+				</li>
+				<li>
+					<a href="text/chapter-4.xhtml"><span epub:type="z3998:roman">IV</span>: <span epub:type="subtitle">Telescopic Philanthropy</span></a>
+				</li>
+				<li>
+					<a href="text/chapter-5.xhtml"><span epub:type="z3998:roman">V</span>: <span epub:type="subtitle">A Morning Adventure</span></a>
+				</li>
+				<li>
+					<a href="text/chapter-6.xhtml"><span epub:type="z3998:roman">VI</span>: <span epub:type="subtitle">Quite at Home</span></a>
+				</li>
+				<li>
+					<a href="text/chapter-7.xhtml"><span epub:type="z3998:roman">VII</span>: <span epub:type="subtitle">The Ghost’s Walk</span></a>
+				</li>
+				<li>
+					<a href="text/chapter-8.xhtml"><span epub:type="z3998:roman">VIII</span>: <span epub:type="subtitle">Covering a Multitude of Sins</span></a>
+				</li>
+				<li>
+					<a href="text/chapter-9.xhtml"><span epub:type="z3998:roman">IX</span>: <span epub:type="subtitle">Signs and Tokens</span></a>
+				</li>
+				<li>
+					<a href="text/chapter-10.xhtml"><span epub:type="z3998:roman">X</span>: <span epub:type="subtitle">The Law-Writer</span></a>
+				</li>
+				<li>
+					<a href="text/chapter-11.xhtml"><span epub:type="z3998:roman">XI</span>: <span epub:type="subtitle">Our Dear Brother</span></a>
+				</li>
+				<li>
+					<a href="text/chapter-12.xhtml"><span epub:type="z3998:roman">XII</span>: <span epub:type="subtitle">On the Watch</span></a>
+				</li>
+				<li>
+					<a href="text/chapter-13.xhtml"><span epub:type="z3998:roman">XIII</span>: <span epub:type="subtitle">Esther’s Narrative</span></a>
+				</li>
+				<li>
+					<a href="text/chapter-14.xhtml"><span epub:type="z3998:roman">XIV</span>: <span epub:type="subtitle">Deportment</span></a>
+				</li>
+				<li>
+					<a href="text/chapter-15.xhtml"><span epub:type="z3998:roman">XV</span>: <span epub:type="subtitle">Bell Yard</span></a>
+				</li>
+				<li>
+					<a href="text/chapter-16.xhtml"><span epub:type="z3998:roman">XVI</span>: <span epub:type="subtitle">Tom-All-Alone’s</span></a>
+				</li>
+				<li>
+					<a href="text/chapter-17.xhtml"><span epub:type="z3998:roman">XVII</span>: <span epub:type="subtitle">Esther’s Narrative</span></a>
+				</li>
+				<li>
+					<a href="text/chapter-18.xhtml"><span epub:type="z3998:roman">XVIII</span>: <span epub:type="subtitle">Lady Dedlock</span></a>
+				</li>
+				<li>
+					<a href="text/chapter-19.xhtml"><span epub:type="z3998:roman">XIX</span>: <span epub:type="subtitle">Moving On</span></a>
+				</li>
+				<li>
+					<a href="text/chapter-20.xhtml"><span epub:type="z3998:roman">XX</span>: <span epub:type="subtitle">A New Lodger</span></a>
+				</li>
+				<li>
+					<a href="text/chapter-21.xhtml"><span epub:type="z3998:roman">XXI</span>: <span epub:type="subtitle">The Smallweed Family</span></a>
+				</li>
+				<li>
+					<a href="text/chapter-22.xhtml"><span epub:type="z3998:roman">XXII</span>: <span epub:type="subtitle">Mr. Bucket</span></a>
+				</li>
+				<li>
+					<a href="text/chapter-23.xhtml"><span epub:type="z3998:roman">XXIII</span>: <span epub:type="subtitle">Esther’s Narrative</span></a>
+				</li>
+				<li>
+					<a href="text/chapter-24.xhtml"><span epub:type="z3998:roman">XXIV</span>: <span epub:type="subtitle">An Appeal Case</span></a>
+				</li>
+				<li>
+					<a href="text/chapter-25.xhtml"><span epub:type="z3998:roman">XXV</span>: <span epub:type="subtitle">Mrs. Snagsby Sees It All</span></a>
+				</li>
+				<li>
+					<a href="text/chapter-26.xhtml"><span epub:type="z3998:roman">XXVI</span>: <span epub:type="subtitle">Sharpshooters</span></a>
+				</li>
+				<li>
+					<a href="text/chapter-27.xhtml"><span epub:type="z3998:roman">XXVII</span>: <span epub:type="subtitle">More Old Soldiers Than One</span></a>
+				</li>
+				<li>
+					<a href="text/chapter-28.xhtml"><span epub:type="z3998:roman">XXVIII</span>: <span epub:type="subtitle">The Ironmaster</span></a>
+				</li>
+				<li>
+					<a href="text/chapter-29.xhtml"><span epub:type="z3998:roman">XXIX</span>: <span epub:type="subtitle">The Young Man</span></a>
+				</li>
+				<li>
+					<a href="text/chapter-30.xhtml"><span epub:type="z3998:roman">XXX</span>: <span epub:type="subtitle">Esther’s Narrative</span></a>
+				</li>
+				<li>
+					<a href="text/chapter-31.xhtml"><span epub:type="z3998:roman">XXXI</span>: <span epub:type="subtitle">Nurse and Patient</span></a>
+				</li>
+				<li>
+					<a href="text/chapter-32.xhtml"><span epub:type="z3998:roman">XXXII</span>: <span epub:type="subtitle">The Appointed Time</span></a>
+				</li>
+				<li>
+					<a href="text/chapter-33.xhtml"><span epub:type="z3998:roman">XXXIII</span>: <span epub:type="subtitle">Interlopers</span></a>
+				</li>
+				<li>
+					<a href="text/chapter-34.xhtml"><span epub:type="z3998:roman">XXXIV</span>: <span epub:type="subtitle">A Turn of the Screw</span></a>
+				</li>
+				<li>
+					<a href="text/chapter-35.xhtml"><span epub:type="z3998:roman">XXXV</span>: <span epub:type="subtitle">Esther’s Narrative</span></a>
+				</li>
+				<li>
+					<a href="text/chapter-36.xhtml"><span epub:type="z3998:roman">XXXVI</span>: <span epub:type="subtitle">Chesney Wold</span></a>
+				</li>
+				<li>
+					<a href="text/chapter-37.xhtml"><span epub:type="z3998:roman">XXXVII</span>: <span epub:type="subtitle">Jarndyce and Jarndyce</span></a>
+				</li>
+				<li>
+					<a href="text/chapter-38.xhtml"><span epub:type="z3998:roman">XXXVIII</span>: <span epub:type="subtitle">A Struggle</span></a>
+				</li>
+				<li>
+					<a href="text/chapter-39.xhtml"><span epub:type="z3998:roman">XXXIX</span>: <span epub:type="subtitle">Attorney and Client</span></a>
+				</li>
+				<li>
+					<a href="text/chapter-40.xhtml"><span epub:type="z3998:roman">XL</span>: <span epub:type="subtitle">National and Domestic</span></a>
+				</li>
+				<li>
+					<a href="text/chapter-41.xhtml"><span epub:type="z3998:roman">XLI</span>: <span epub:type="subtitle">In Mr. Tulkinghorn’s Room</span></a>
+				</li>
+				<li>
+					<a href="text/chapter-42.xhtml"><span epub:type="z3998:roman">XLII</span>: <span epub:type="subtitle">In Mr. Tulkinghorn’s Chambers</span></a>
+				</li>
+				<li>
+					<a href="text/chapter-43.xhtml"><span epub:type="z3998:roman">XLIII</span>: <span epub:type="subtitle">Esther’s Narrative</span></a>
+				</li>
+				<li>
+					<a href="text/chapter-44.xhtml"><span epub:type="z3998:roman">XLIV</span>: <span epub:type="subtitle">The Letter and the Answer</span></a>
+				</li>
+				<li>
+					<a href="text/chapter-45.xhtml"><span epub:type="z3998:roman">XLV</span>: <span epub:type="subtitle">In Trust</span></a>
+				</li>
+				<li>
+					<a href="text/chapter-46.xhtml"><span epub:type="z3998:roman">XLVI</span>: <span epub:type="subtitle">Stop Him!</span></a>
+				</li>
+				<li>
+					<a href="text/chapter-47.xhtml"><span epub:type="z3998:roman">XLVII</span>: <span epub:type="subtitle">Jo’s Will</span></a>
+				</li>
+				<li>
+					<a href="text/chapter-48.xhtml"><span epub:type="z3998:roman">XLVIII</span>: <span epub:type="subtitle">Closing In</span></a>
+				</li>
+				<li>
+					<a href="text/chapter-49.xhtml"><span epub:type="z3998:roman">XLIX</span>: <span epub:type="subtitle">Dutiful Friendship</span></a>
+				</li>
+				<li>
+					<a href="text/chapter-50.xhtml"><span epub:type="z3998:roman">L</span>: <span epub:type="subtitle">Esther’s Narrative</span></a>
+				</li>
+				<li>
+					<a href="text/chapter-51.xhtml"><span epub:type="z3998:roman">LI</span>: <span epub:type="subtitle">Enlightened</span></a>
+				</li>
+				<li>
+					<a href="text/chapter-52.xhtml"><span epub:type="z3998:roman">LII</span>: <span epub:type="subtitle">Obstinacy</span></a>
+				</li>
+				<li>
+					<a href="text/chapter-53.xhtml"><span epub:type="z3998:roman">LIII</span>: <span epub:type="subtitle">The Track</span></a>
+				</li>
+				<li>
+					<a href="text/chapter-54.xhtml"><span epub:type="z3998:roman">LIV</span>: <span epub:type="subtitle">Springing a Mine</span></a>
+				</li>
+				<li>
+					<a href="text/chapter-55.xhtml"><span epub:type="z3998:roman">LV</span>: <span epub:type="subtitle">Flight</span></a>
+				</li>
+				<li>
+					<a href="text/chapter-56.xhtml"><span epub:type="z3998:roman">LVI</span>: <span epub:type="subtitle">Pursuit</span></a>
+				</li>
+				<li>
+					<a href="text/chapter-57.xhtml"><span epub:type="z3998:roman">LVII</span>: <span epub:type="subtitle">Esther’s Narrative</span></a>
+				</li>
+				<li>
+					<a href="text/chapter-58.xhtml"><span epub:type="z3998:roman">LVIII</span>: <span epub:type="subtitle">A Wintry Day and Night</span></a>
+				</li>
+				<li>
+					<a href="text/chapter-59.xhtml"><span epub:type="z3998:roman">LIX</span>: <span epub:type="subtitle">Esther’s Narrative</span></a>
+				</li>
+				<li>
+					<a href="text/chapter-60.xhtml"><span epub:type="z3998:roman">LX</span>: <span epub:type="subtitle">Perspective</span></a>
+				</li>
+				<li>
+					<a href="text/chapter-61.xhtml"><span epub:type="z3998:roman">LXI</span>: <span epub:type="subtitle">A Discovery</span></a>
+				</li>
+				<li>
+					<a href="text/chapter-62.xhtml"><span epub:type="z3998:roman">LXII</span>: <span epub:type="subtitle">Another Discovery</span></a>
+				</li>
+				<li>
+					<a href="text/chapter-63.xhtml"><span epub:type="z3998:roman">LXIII</span>: <span epub:type="subtitle">Steel and Iron</span></a>
+				</li>
+				<li>
+					<a href="text/chapter-64.xhtml"><span epub:type="z3998:roman">LXIV</span>: <span epub:type="subtitle">Esther’s Narrative</span></a>
+				</li>
+				<li>
+					<a href="text/chapter-65.xhtml"><span epub:type="z3998:roman">LXV</span>: <span epub:type="subtitle">Beginning the World</span></a>
+				</li>
+				<li>
+					<a href="text/chapter-66.xhtml"><span epub:type="z3998:roman">LXVI</span>: <span epub:type="subtitle">Down in Lincolnshire</span></a>
+				</li>
+				<li>
+					<a href="text/chapter-67.xhtml"><span epub:type="z3998:roman">LXVII</span>: <span epub:type="subtitle">The Close of Esther’s Narrative</span></a>
 				</li>
 				<li>
 					<a href="text/colophon.xhtml">Colophon</a>
@@ -34,7 +238,13 @@
 					<a href="text/imprint.xhtml" epub:type="frontmatter imprint">Imprint</a>
 				</li>
 				<li>
-					<a href="text/chapter-1.xhtml" epub:type="bodymatter z3998:fiction">WORKTITLE</a>
+					<a href="text/preface.xhtml" epub:type="frontmatter preface z3998:non-fiction">Preface</a>
+				</li>
+				<li>
+					<a href="text/halftitle.xhtml" epub:type="frontmatter z3998:fiction">Half Title</a>
+				</li>
+				<li>
+					<a href="text/chapter-1.xhtml" epub:type="bodymatter z3998:fiction">Bleak House</a>
 				</li>
 				<li>
 					<a href="text/colophon.xhtml" epub:type="backmatter colophon">Colophon</a>
