Fixes issues identified during proof-reading.

--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -221,6 +221,9 @@
 					<a href="text/chapter-67.xhtml"><span epub:type="z3998:roman">LXVII</span>: <span epub:type="subtitle">The Close of Esther’s Narrative</span></a>
 				</li>
 				<li>
+					<a href="text/endnotes.xhtml">Endnotes</a>
+				</li>
+				<li>
 					<a href="text/colophon.xhtml">Colophon</a>
 				</li>
 				<li>
