--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -83,7 +83,7 @@
 							<a href="text/chapter-21.xhtml"><span epub:type="z3998:roman">XXI</span>: The Smallweed Family</a>
 						</li>
 						<li>
-							<a href="text/chapter-22.xhtml"><span epub:type="z3998:roman">XXII</span>: Mr. Bucket</a>
+							<a href="text/chapter-22.xhtml"><span epub:type="z3998:roman">XXII</span>: <abbr>Mr.</abbr> Bucket</a>
 						</li>
 						<li>
 							<a href="text/chapter-23.xhtml"><span epub:type="z3998:roman">XXIII</span>: Esther’s Narrative</a>
@@ -92,7 +92,7 @@
 							<a href="text/chapter-24.xhtml"><span epub:type="z3998:roman">XXIV</span>: An Appeal Case</a>
 						</li>
 						<li>
-							<a href="text/chapter-25.xhtml"><span epub:type="z3998:roman">XXV</span>: Mrs. Snagsby Sees It All</a>
+							<a href="text/chapter-25.xhtml"><span epub:type="z3998:roman">XXV</span>: <abbr>Mrs.</abbr> Snagsby Sees It All</a>
 						</li>
 						<li>
 							<a href="text/chapter-26.xhtml"><span epub:type="z3998:roman">XXVI</span>: Sharpshooters</a>
@@ -140,10 +140,10 @@
 							<a href="text/chapter-40.xhtml"><span epub:type="z3998:roman">XL</span>: National and Domestic</a>
 						</li>
 						<li>
-							<a href="text/chapter-41.xhtml"><span epub:type="z3998:roman">XLI</span>: In Mr. Tulkinghorn’s Room</a>
+							<a href="text/chapter-41.xhtml"><span epub:type="z3998:roman">XLI</span>: In <abbr>Mr.</abbr> Tulkinghorn’s Room</a>
 						</li>
 						<li>
-							<a href="text/chapter-42.xhtml"><span epub:type="z3998:roman">XLII</span>: In Mr. Tulkinghorn’s Chambers</a>
+							<a href="text/chapter-42.xhtml"><span epub:type="z3998:roman">XLII</span>: In <abbr>Mr.</abbr> Tulkinghorn’s Chambers</a>
 						</li>
 						<li>
 							<a href="text/chapter-43.xhtml"><span epub:type="z3998:roman">XLIII</span>: Esther’s Narrative</a>
