Update endnotes to new standard

--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -9,11 +9,11 @@
 		<section id="endnotes" epub:type="rearnotes">
 			<h2 epub:type="title">Endnotes</h2>
 			<ol>
-				<li data-se-note-number="1" id="note-1" epub:type="rearnote">
-					<p>[Producer’s Note: This referred to a specific page in the printed book, which has here been replaced by a hyperlink.] <a href="../text/preface.xhtml#note-1" epub:type="se:referrer">↩</a></p>
+				<li id="note-1" epub:type="rearnote">
+					<p>[Producer’s Note: This referred to a specific page in the printed book, which has here been replaced by a hyperlink.] <a href="../text/preface.xhtml#noteref-1" epub:type="se:referrer">↩</a></p>
 				</li>
-				<li data-se-note-number="2" id="note-2" epub:type="rearnote">
-					<p>Another case, very clearly described by a dentist, occurred at the town of Columbus, in the United States of America, quite recently. The subject was a German who kept a liquor-shop and was an inveterate drunkard. <a href="../text/preface.xhtml#note-2" epub:type="se:referrer">↩</a></p>
+				<li id="note-2" epub:type="rearnote">
+					<p>Another case, very clearly described by a dentist, occurred at the town of Columbus, in the United States of America, quite recently. The subject was a German who kept a liquor-shop and was an inveterate drunkard. <a href="../text/preface.xhtml#noteref-2" epub:type="se:referrer">↩</a></p>
 				</li>
 			</ol>
 		</section>
