--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -10,7 +10,7 @@
 			<h2 epub:type="title">Endnotes</h2>
 			<ol>
 				<li id="note-1" epub:type="rearnote">
-					<p>Another case, very clearly described by a dentist, occurred at the town of Columbus, in the United States of America, quite recently. The subject was a German who kept a liquor-shop and was an inveterate drunkard. <a href="../text/preface.xhtml#noteref-1" epub:type="se:referrer">↩</a></p>
+					<p>Another case, very clearly described by a dentist, occurred at the town of Columbus, in the United States of America, quite recently. The subject was a German who kept a liquor-shop and was an inveterate drunkard. <a href="preface.xhtml#noteref-1" epub:type="se:referrer">↩</a></p>
 				</li>
 			</ol>
 		</section>
