--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -19,7 +19,7 @@
 			by<br/>
 			<a href="https://rightword.com.au/david.php">David Grigg</a>,<br/>
 			and is based on a transcription produced in 1997 by<br/>
-			<span class="name">Donald Laison</span>, and revised by <span class="name">Thomas Berger</span>, and <span class="name">Joseph E. Loewenstein, M.D.</span><br/>
+			<b class="name">Donald Laison</b>, and revised by <b class="name">Thomas Berger</b>, and <b class="name">Joseph E. Loewenstein, M.D.</b><br/>
 			for<br/>
 			<a href="https://www.gutenberg.org/ebooks/1023">Project Gutenberg</a><br/>
 			and on digital scans available at the<br/>
@@ -29,17 +29,14 @@
 			a painting completed in 1882 by<br/>
 			<a href="https://en.wikipedia.org/wiki/Thomas_Eakins">Thomas Eakins</a>.<br/>
 			The cover and title pages feature the<br/>
-			<span epub:type="se:name.visual-art.typeface">League Spartan</span> and <span epub:type="se:name.visual-art.typeface">Sorts Mill Goudy</span><br/>
+			<b epub:type="se:name.visual-art.typeface">League Spartan</b> and <b epub:type="se:name.visual-art.typeface">Sorts Mill Goudy</b><br/>
 			typefaces created in 2014 and 2009 by<br/>
 			<a href="https://www.theleagueofmoveabletype.com">The League of Moveable Type</a>.</p>
-			<p>This is the <span class="revision-number">20th</span> edition of this ebook.<br/>
-			This edition was released on<br/>
-			<span class="revision-date">January 20, 2019, 5:52 <abbr class="time eoc">p.m.</abbr></span><br/>
-			The first edition was released on<br/>
-			<span class="release-date">November 5, 2017, 1:41 <abbr class="time eoc">a.m.</abbr></span><br/>
+			<p>The first edition of this ebook was released on<br/>
+			<b>November 5, 2017, 1:41 <abbr class="time eoc">a.m.</abbr></b><br/>
 			You can check for updates to this ebook, view its revision history, or download it for different ereading systems at<br/>
-			<a class="raw-url" href="https://standardebooks.org/ebooks/charles-dickens/bleak-house">standardebooks.org/ebooks/charles-dickens/bleak-house</a>.</p>
-			<p>The volunteer-driven Standard Ebooks project relies on readers like you to submit typos, corrections, and other improvements. Anyone can contribute at <a class="raw-url" href="https://standardebooks.org">standardebooks.org</a>.</p>
+			<a href="https://standardebooks.org/ebooks/charles-dickens/bleak-house">standardebooks.org/ebooks/charles-dickens/bleak-house</a>.</p>
+			<p>The volunteer-driven Standard Ebooks project relies on readers like you to submit typos, corrections, and other improvements. Anyone can contribute at <a href="https://standardebooks.org">standardebooks.org</a>.</p>
 		</section>
 	</body>
 </html>
