Update for epub 3.2 compatibility

--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -6,11 +6,11 @@
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="backmatter z3998:fiction">
-		<section id="endnotes" epub:type="rearnotes">
+		<section id="endnotes" epub:type="endnotes">
 			<h2 epub:type="title">Endnotes</h2>
 			<ol>
-				<li id="note-1" epub:type="rearnote">
-					<p>Another case, very clearly described by a dentist, occurred at the town of Columbus, in the United States of America, quite recently. The subject was a German who kept a liquor-shop and was an inveterate drunkard. <a href="preface.xhtml#noteref-1" epub:type="se:referrer">↩</a></p>
+				<li id="note-1" epub:type="endnote">
+					<p>Another case, very clearly described by a dentist, occurred at the town of Columbus, in the United States of America, quite recently. The subject was a German who kept a liquor-shop and was an inveterate drunkard. <a href="preface.xhtml#noteref-1" epub:type="backlink">↩</a></p>
 				</li>
 			</ol>
 		</section>
