Rename halftitle.xhtml -> halftitlepage.xhtml

--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -17,7 +17,7 @@
 					<a href="text/preface.xhtml">Preface</a>
 				</li>
 				<li>
-					<a href="text/halftitle.xhtml">Bleak House</a>
+					<a href="text/halftitlepage.xhtml">Bleak House</a>
 					<ol>
 						<li>
 							<a href="text/chapter-1.xhtml"><span epub:type="z3998:roman">I</span>: In Chancery</a>
@@ -246,7 +246,7 @@
 					<a href="text/preface.xhtml" epub:type="frontmatter preface">Preface</a>
 				</li>
 				<li>
-					<a href="text/halftitle.xhtml" epub:type="frontmatter halftitlepage">Half Title</a>
+					<a href="text/halftitlepage.xhtml" epub:type="frontmatter halftitlepage">Half Title</a>
 				</li>
 				<li>
 					<a href="text/chapter-1.xhtml" epub:type="bodymatter z3998:fiction">Bleak House</a>
