--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -19,7 +19,7 @@
 			by<br/>
 			<a href="https://rightword.com.au/david.php">David Grigg</a>,<br/>
 			and is based on a transcription produced in 1997 by<br/>
-			<b class="name">Donald Laison</b>, and revised by <b class="name">Thomas Berger</b>, and <b class="name">Joseph E. Loewenstein, M.D.</b><br/>
+			<b epub:type="z3998:personal-name">Donald Laison</b>, and revised by <b epub:type="z3998:personal-name">Thomas Berger</b>, and <b epub:type="z3998:personal-name">Joseph E. Loewenstein, M.D.</b><br/>
 			for<br/>
 			<a href="https://www.gutenberg.org/ebooks/1023">Project Gutenberg</a><br/>
 			and on digital scans available at the<br/>
