--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -17,7 +17,7 @@
 			<p>This ebook was produced for<br/>
 			<a href="https://standardebooks.org">Standard Ebooks</a><br/>
 			by<br/>
-			<a href="https://rightword.com.au/david.php">David Grigg</a>,<br/>
+			<a href="https://thegriggs.org/david/">David Grigg</a>,<br/>
 			and is based on a transcription produced in 1997 by<br/>
 			<b epub:type="z3998:personal-name">Donald Laison</b>, and revised by <b epub:type="z3998:personal-name">Thomas Berger</b>, and <b epub:type="z3998:personal-name">Joseph E. Loewenstein, M.D.</b><br/>
 			for<br/>
