--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -22,7 +22,7 @@
 			<b epub:type="z3998:personal-name">Donald Laison</b>, and revised by <b epub:type="z3998:personal-name">Thomas Berger</b>, and <b epub:type="z3998:personal-name">Joseph E. Loewenstein, M.D.</b><br/>
 			for<br/>
 			<a href="https://www.gutenberg.org/ebooks/1023">Project Gutenberg</a><br/>
-			and on digital scans available at the<br/>
+			and on digital scans from the<br/>
 			<a href="https://archive.org/details/in.ernet.dli.2015.225310">Internet Archive</a>.</p>
 			<p>The cover page is adapted from<br/>
 			<i epub:type="se:name.visual-art.painting">The Writing Master</i>,<br/>
