--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -19,7 +19,7 @@
 			by<br/>
 			<a href="https://thegriggs.org/david/">David Grigg</a>,<br/>
 			and is based on a transcription produced in 1997 by<br/>
-			<b epub:type="z3998:personal-name">Donald Laison</b>, and revised by <b epub:type="z3998:personal-name">Thomas Berger</b>, and <b epub:type="z3998:personal-name">Joseph E. Loewenstein, M.D.</b><br/>
+			<b epub:type="z3998:personal-name">Donald Laison</b>, and revised by <b epub:type="z3998:personal-name">Thomas Berger</b>, and <b epub:type="z3998:personal-name">Joseph E. Loewenstein, <abbr epub:type="z3998:name-title">M.D.</abbr></b><br/>
 			for<br/>
 			<a href="https://www.gutenberg.org/ebooks/1023">Project Gutenberg</a><br/>
 			and on digital scans from the<br/>
